// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`при клике на кнопку "купить" в лк откроет модал оплаты 1`] = `
Array [
  Object {
    "category": "moto",
    "from": "api_m_card",
    "offerId": "1085562758-1970f439",
    "platform": "PLATFORM_MOBILE",
    "services": Array [
      Object {
        "service": "all_sale_activate",
      },
    ],
    "shouldShowSuccessTextAfter": true,
    "successText": "Платёж прошёл",
  },
]
`;

exports[`при клике на кнопку "купить" на карточке залогирует клик 1`] = `
Array [
  Object {
    "category": "moto",
    "event": "VAS_CLICK",
    "from": "api_m_card",
    "offerId": "1085562758-1970f439",
    "originalPrice": 4958,
    "price": 2975,
    "serviceId": "package_vip",
  },
]
`;

exports[`при клике на кнопку "купить" на карточке откроет модал оплаты 1`] = `
Array [
  Object {
    "category": "moto",
    "from": "api_m_card",
    "offerId": "1085562758-1970f439",
    "platform": "PLATFORM_MOBILE",
    "services": Array [
      Object {
        "service": "package_vip",
      },
    ],
    "shouldShowSuccessTextAfter": true,
    "successText": "Опция успешно активирована",
  },
]
`;
